# MPI_ping_pong

./: .gitignore  CMakeLists.txt  README.md  main.cpp
